# barberq

./: .gitignore  Makefile  docker-compose.yaml  package-lock.json  pyproject.toml  tailwind.config.js
docker/postgres/: init.sh
src/: manage.py
src/barberq/: admin.py  apps.py  models.py  views.py
src/barberq/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password_and_more.py  0003_alter_user_first_name_alter_user_last_name.py
src/barberq/scripts/: barbers_data.py  clients_data.py
src/barberq/scripts/data/: barbers.json  clients.json
src/barberq/templatetags/: custom_filters.py
src/barberq/tests/: test_models.py
src/barberq/utils/: validators.py
src/barberq_project/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: settings.py  urls.py
src/static/css/: output.css
src/static/src/: output.css
src/templates/: _base.html  base.html
src/templates/barberq/: index.html  reservation.html
src/templates/barberq/components/: navbar.html
src/templates/registration/: logged_out.html  login.html
