[tool.poetry]
name = "barberq"
version = "0.1.0"
description = ""
authors = ["André Lopes <andrelopes-code@gmail.com>"]
packages = [{ include = "src" }]
include = ["src/**/*"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pydantic-settings = "^2.3.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
django-compressor = "^4.5"
coverage = "^7.5.4"
django-extensions = "^3.2.3"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL'] # PT

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
